--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Celbridge.Inspector.Views"
+    xmlns:models="using:Celbridge.Inspector.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
 
@@ -10,6 +11,17 @@
             Header="Components"
             SelectionMode="Single"
             CanReorderItems="True"
-            AllowDrop="True"/>
+            ItemsSource="{x:Bind ViewModel.ComponentItems}"
+            AllowDrop="True">
+
+    <ListView.ItemTemplate>
+      <DataTemplate x:DataType="models:ComponentItem">
+        <StackPanel Orientation="Horizontal" Margin="5">
+          <TextBlock Text="{x:Bind ComponentType}" />
+        </StackPanel>
+      </DataTemplate>
+    </ListView.ItemTemplate>
+    
+  </ListView>
 
 </UserControl>
