Preserve selected index when repopulating the component list

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
@@ -11,6 +11,7 @@
             SelectionMode="Single"
             CanReorderItems="True"
             ItemsSource="{x:Bind ViewModel.ComponentItems}"
+            SelectedIndex="{x:Bind ViewModel.SelectedComponentIndex, Mode=TwoWay}"
             AllowDrop="True">
 
     <ListView.ItemTemplate>
