--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
@@ -11,16 +11,25 @@
     <MenuFlyout x:Name="EntityContextMenu">
 
       <MenuFlyoutItem Text="Add"
-                      Click="OnAddComponentClicked">
+                      Command="{x:Bind ViewModel.AddComponentCommand, Mode=OneWay}"
+                      CommandParameter="{Binding}">
         <MenuFlyoutItem.Icon>
           <SymbolIcon Symbol="Add"/>
         </MenuFlyoutItem.Icon>
       </MenuFlyoutItem>
 
       <MenuFlyoutItem Text="Delete"
-                      Click="OnDeleteComponentClicked">
+                      Command="{x:Bind ViewModel.DeleteComponentCommand, Mode=OneWay}"
+                      CommandParameter="{Binding}">
         <MenuFlyoutItem.Icon>
           <FontIcon Glyph="&#xE107;"/>
+        </MenuFlyoutItem.Icon>
+      </MenuFlyoutItem>
+      <MenuFlyoutItem Text="Duplicate"
+                      Command="{x:Bind ViewModel.DuplicateComponentCommand, Mode=OneWay}"
+                      CommandParameter="{Binding}">
+        <MenuFlyoutItem.Icon>
+          <SymbolIcon Symbol="Copy"/>
         </MenuFlyoutItem.Icon>
       </MenuFlyoutItem>
     </MenuFlyout>
