Shift + enter in text box adds a new component

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/EntityInspector.xaml
@@ -62,7 +62,8 @@
             <TextBox Text="{x:Bind ComponentType}"
                      MinWidth="140"
                      Margin="0"
-                     Grid.Column="0"/>
+                     Grid.Column="0"
+                     KeyDown="TextBox_KeyDown"/>
 
           </Grid>
         </DataTemplate>
