--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Celbridge.Inspector.Views.EntityInspector"
+    x:Class="Celbridge.Inspector.Views.ComponentListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Celbridge.Inspector.Views"
