--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentEditor.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentEditor.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
 
   <Grid x:Name="PropertyInspectors">
-    <TextBlock Text="Inspect a component"/>
+    <TextBlock x:Name="InspectionTarget"
+               Text="{x:Bind ViewModel.InspectedItem, Mode=OneWay}"/>
   </Grid>
 </UserControl>
