--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentTypeEditor.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentTypeEditor.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Celbridge.Inspector.Views.ComponentEditor"
+    x:Class="Celbridge.Inspector.Views.ComponentTypeEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Celbridge.Inspector.Views"
@@ -17,22 +17,13 @@
       <TextBlock VerticalAlignment="Center"
                  Margin="6 0 0 0"
                  FontWeight="Bold"
-                 Text="{x:Bind ViewModel.ComponentType, Mode=OneWay}"/>
+                 Text="Select instruction"/>
     </Grid>
 
-    <Grid x:Name="ComponentValueEditor"
-          Grid.Row="1"
-          Visibility="{x:Bind ViewModel.ComponentValueEditorVisibility, Mode=OneWay}">
+    <Grid Grid.Row="1">
       <TextBlock Margin="6"
-                 Text="{x:Bind ViewModel.PropertyList, Mode=OneWay}"/>
+                 Text="Instruction list"/>
     </Grid>
-
-    <Grid x:Name="ComponentTypeEditor"
-          Grid.Row="1"
-          Visibility="{x:Bind ViewModel.ComponentTypeEditorVisibility, Mode=OneWay}">
-      <TextBlock Margin="6"
-                 Text="Select component type"/>
-    </Grid>    
   </Grid>
-
+  
 </UserControl>
