Display filtered list of component types as user enters text

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
@@ -90,6 +90,7 @@
                        VerticalAlignment="Center"
                        MinWidth="140"
                        Visibility="Collapsed"
+                       TextChanged="EditTextBox_TextChanged"
                        LostFocus="ComponentItem_EditTextBox_LostFocus"
                        KeyDown="ComponentItem_EditTextBox_KeyDown"/>
 
