Force first item in component type list to be selected

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentTypeEditor.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentTypeEditor.xaml
@@ -22,7 +22,8 @@
 
     <Grid Grid.Row="1">
       <ListView Margin="6"
-                ItemsSource="{x:Bind ViewModel.ComponentTypeList}"/>
+                ItemsSource="{x:Bind ViewModel.ComponentTypeList}"
+                SelectedIndex="{x:Bind ViewModel.SelectedIndex, Mode=OneWay}"/>
     </Grid>
   </Grid>
   
