Display a text box for each string property

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentValueEditor.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentValueEditor.xaml
@@ -21,8 +21,8 @@
     </Grid>
 
     <Grid Grid.Row="1">
-      <TextBlock Margin="6"
-                 Text="{x:Bind ViewModel.PropertyList, Mode=OneWay}"/>
+      <StackPanel x:Name="PropertyForms"
+                  Margin="6"/>
     </Grid>
   </Grid>
 
