Suppress excess property and value change messages

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
@@ -8,6 +8,6 @@
 
   <Grid>
     <TextBox Header="{x:Bind ViewModel.PropertyName}"
-             Text="{x:Bind ViewModel.Value, Mode=TwoWay, UpdateSourceTrigger=Default}"/>
+             Text="{x:Bind ViewModel.Value, Mode=TwoWay}"/>
   </Grid>
 </UserControl>
