Use Humanizer to format the property names

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentValueEditor.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentValueEditor.xaml
@@ -22,7 +22,8 @@
 
     <Grid Grid.Row="1">
       <StackPanel x:Name="PropertyForms"
-                  Margin="6"/>
+                  Margin="6"
+                  Spacing="8"/>
     </Grid>
   </Grid>
 
