--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
 
   <Grid>
-    <TextBox Header="{x:Bind ViewModel.PropertyName}"
-             Text="{x:Bind ViewModel.Value, Mode=TwoWay}"/>
+    <TextBox Header="{x:Bind ViewModel.HeaderText}"
+             Text="{x:Bind ViewModel.ValueText, Mode=TwoWay}"
+             TextWrapping="Wrap"/>
   </Grid>
 </UserControl>
