Pressing enter in string from tabs to the next property

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/StringForm.xaml
@@ -9,6 +9,7 @@
   <Grid>
     <TextBox Header="{x:Bind ViewModel.HeaderText}"
              Text="{x:Bind ViewModel.ValueText, Mode=TwoWay}"
-             TextWrapping="Wrap"/>
+             TextWrapping="Wrap"
+             KeyDown="TextBox_KeyDown"/>
   </Grid>
 </UserControl>
