Move context menu to right hand side

--- a/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
+++ b/Celbridge/Modules/Workspace/Celbridge.Inspector/Views/ComponentListView.xaml
@@ -65,6 +65,7 @@
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="*"/>
+              <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Column="0"
@@ -95,22 +96,6 @@
                        GotFocus="ComponentItem_EditTextBox_GotFocus"
                        LostFocus="ComponentItem_EditTextBox_LostFocus"
                        KeyDown="ComponentItem_EditTextBox_KeyDown"/>
-
-              <!-- MenuButton is displayed when component name does not have focus -->
-              <Button x:Name="MenuButton"
-                      Grid.Column="1"
-                      Width="24"
-                      Height="24"
-                      Padding="0"
-                      BorderThickness="0"
-                      Opacity="0.5"
-                      Background="Transparent"
-                      Click="ComponentMenuButton_Click"
-                      Visibility="Visible">
-                <FontIcon FontFamily="Segoe MDL2 Assets"
-                          Glyph="&#xE70D;"
-                          FontSize="12"/>
-              </Button>
             </Grid>
 
             <Grid Grid.Column="1"
@@ -130,8 +115,26 @@
                           Visibility="{x:Bind ShowWarningIcon, Mode=OneWay}"/>
                 
                 <TextBlock Text="{x:Bind ComponentDescription, Mode=OneWay}"
+                           VerticalAlignment="Center"
                            Margin="6 0 0 0"/>
               </StackPanel>
+            </Grid>
+
+            <Grid Grid.Column="2"
+                  Margin="6 0 0 0">
+              <!-- MenuButton is displayed when component name does not have focus -->
+              <Button x:Name="MenuButton"
+                      Grid.Column="1"
+                      Width="24"
+                      Height="24"
+                      Padding="0"
+                      BorderThickness="0"
+                      Background="Transparent"
+                      Click="ComponentMenuButton_Click"
+                      Visibility="Visible">
+                <FontIcon FontFamily="Segoe MDL2 Assets"
+                          Glyph="&#xE712;"/>
+              </Button>
             </Grid>
           </Grid>
         </DataTemplate>
