--- a/Celbridge/Modules/Activities/Celbridge.Screenplay/ComponentEditorViews/EmptyEditorView.xaml
+++ b/Celbridge/Modules/Activities/Celbridge.Screenplay/ComponentEditorViews/EmptyEditorView.xaml
@@ -1,10 +1,11 @@
 ﻿<UserControl
-    x:Class="Celbridge.Screenplay.ComponentEditorViews.LineEditor"
+    x:Class="Celbridge.Screenplay.ComponentEditorViews.EmptyEditorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
 
     <Grid>
-      <TextBlock Text="Test" />
+      <TextBox Header="Comment"
+               Text="{Binding Comment, Mode=OneWay}" />
     </Grid>
 </UserControl>
