--- a/Celbridge/Modules/Activities/Celbridge.Screenplay/ComponentEditorViews/MarkdownEditorView.xaml
+++ b/Celbridge/Modules/Activities/Celbridge.Screenplay/ComponentEditorViews/MarkdownEditorView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Celbridge.Screenplay.ComponentEditorViews.ScreenplayActivityEditor"
+    x:Class="Celbridge.Screenplay.ComponentEditorViews.MarkdownEditorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
